--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,9 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-/* TODO(bhaines): remove, this is only necessary until
-https://github.com/yext/pages/issues/211 is resolved */
-#reactele,
-#root {
+#reactele {
   display: grid;
-  height: 100%;
+  min-height: 100%;
   grid-template-rows: auto 1fr auto;
   font-family: theme(fontFamily.primary);
 }
